# tars

crates/tars-cli/src/: main.rs
crates/tars-provider/src/backends/: anthropic.rs
crates/tars-provider/tests/: anthropic_batch_integration.rs
crates/tars-runtime/: Cargo.toml
crates/tars-runtime/examples/: multi_step_with_tools.rs
docs/: USER-GUIDE.md  observability.md  roadmap.md
